--- a/index.html
+++ b/index.html
@@ -1,1 +1,86 @@
-<h1>Hi</h1>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Научиться учиться</title>
+  <link rel="stylesheet" href="./pages/index.css">
+</head>
+<body class="page">
+  
+
+    <header class="header">
+      <img class="logo logo_place_header" src="images/logo/logo_place_header.svg" alt="Логотип Яндекс.Практикум">
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#" title="Узнать">Узнать &rarr;</a></p>
+      <img class="header__main-illustration" src="images/header/header-image.png" alt="Фрагмент картины &quot;Опять двойка&quot;">
+      <div class="header__square-pic rotation"></div>
+    </header>
+
+    <main class="content">
+
+      <section class="description" aria-label="Секция со статьей">
+        <article class="two-columns">
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
+        </article>
+      </section>
+
+    </main>
+
+  <footer class="footer">
+    <div class="footer__columns">
+
+      <div class="footer__column footer__column_content_copyright">
+        <img class="logo logo_place_footer" src="images/logo/logo_place_footer.svg" alt="Логотип Яндекс.Практикум">
+        <p class="footer__author">© Дмитрий Безруков</p>
+      </div>
+
+      <nav class="footer__column footer__column_content_info">
+        <h3 class="footer__column-heading">О Практикуме</h3>
+        <ul class="footer__column-links">
+          <li>
+            <a href="#" class="footer__column-link">Главная</a>
+          </li>
+          <li>
+            <a href="#" class="footer__column-link">Концепция</a>
+          </li>
+          <li>
+            <a href="#" class="footer__column-link">Наставники</a>
+          </li>
+        </ul>
+      </nav>
+
+      <nav class="footer__column footer__column_content_social">
+        <h3 class="footer__column-heading">Соцсети</h3>
+        <ul class="footer__column-links">
+          <li>
+            <a href="#" target="_blank" class="footer__column-link">
+              <img src="images/footer/facebook_color_white.svg" alt="Фейсбук" class="footer__social-icon">
+              Facebook
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank" class="footer__column-link">
+              <img src="images/footer/vk_color_white.svg" alt="ВКонтакте" class="footer__social-icon">
+              ВКонтакте
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank" class="footer__column-link">
+              <img src="images/footer/instagram_color_white.svg" alt="Инстаграм" class="footer__social-icon">
+              Instagram
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </footer>
+  </div>
+</body>
+</html>
