--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
 
     <header class="header">
-      <img class="logo logo_place_header" src="images/logo/logo_place_header.svg" alt="Логотип Яндекс.Практикум">
+      <img class="logo logo_place_header" src="images/logo/header__logo.svg" alt="Логотип проекта \"Путешествие по России \"">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#" title="Узнать">Узнать &rarr;</a></p>
       <img class="header__main-illustration" src="images/header/header-image.png" alt="Фрагмент картины &quot;Опять двойка&quot;">
