--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
   
 
     <header class="header">
+      
       <img class="logo logo_place_header" src="images/logo/header__logo.svg" alt="Логотип проекта \"Путешествие по России \"">
-      <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#" title="Узнать">Узнать &rarr;</a></p>
-      <img class="header__main-illustration" src="images/header/header-image.png" alt="Фрагмент картины &quot;Опять двойка&quot;">
-      <div class="header__square-pic rotation"></div>
+      
+      <ul class="header__lang-links">
+        <li class="header__list-item"><a class="header__lang-link header__lang-link_active" href="#">Ru</a></li>
+        <li class="header__list-item"><a class="header__lang-link" href="#">En</a></li>
+      </ul>
+
     </header>
 
     <main class="content">
