--- a/index.html
+++ b/index.html
@@ -3,26 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Научиться учиться</title>
+  <title>Путешествия по России</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="page">
-  
+
 
     <header class="header">
-      
-      <img class="logo logo_place_header" src="images/logo/header__logo.svg" alt="Логотип проекта \"Путешествие по России \"">
-      
+
+      <img class="header__logo" src="images/logo/header__logo.svg" alt="Логотип проекта &quot;Путешествие по России&quot; ">
+
       <ul class="header__lang-links">
-        <li class="header__list-item"><a class="header__lang-link header__lang-link_active" href="#">Ru</a></li>
-        <li class="header__list-item"><a class="header__lang-link" href="#">En</a></li>
+        <li class="header__lang-item"><a class="header__lang-link header__lang-link_active" href="#">Ru</a></li>
+        <li><a class="header__lang-link" href="#">En</a></li>
       </ul>
 
     </header>
 
     <main class="content">
 
-      <section class="description" aria-label="Секция со статьей">
+      <section class="lead">
+
+          <h1 class="lead__title">Путешествия по России</h1>
+
+          <p class="lead__subtitle">Настоящая страна не в выпусках
+            новостей, а здесь.</p>
+
+          <figure class="lead__figure">
+            <img class="lead__image" src="./images/lead/lead__image.jpg" alt="Фотография боковой полки в плацкарте, маршрут от Пскова до Улан-Удэ.">
+            <figcaption class="lead__caption">ваша&nbsp;полка&nbsp;—&nbsp;верхняя</figcaption>
+          </figure>
+
+      </section>
+
+
+      <section class="lead2" aria-label="Секция со статьей">
         <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
 
