--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Путешествия по России</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
@@ -37,68 +37,141 @@
       </section>
 
 
-      <section class="lead2" aria-label="Секция со статьей">
-        <article class="two-columns">
-          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
-
-          <div class="two-columns__main-text">
-            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
-          </div>
-        </article>
+      <section class="intro">
+        <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
+        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без&nbsp;миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и&nbsp;проехала 20 тысяч километров по&nbsp;родной стране. Мы выбрали и&nbsp;описали некоторые интересные места, достойные вашего отпуска.</p>
+        <ul class="intro__list">
+          <li>Часовых поясов <span class="intro__numbers">11</span></li>
+          <li>Объектов природного наследия ЮНЕСКО <span class="intro__numbers">12</span></li>
+          <li>Объектов культурного наследия ЮНЕСКО <span class="intro__numbers">16</span></li>
+          <li> Природных заповедников <span class="intro__numbers">105</span></li>
+          <li>Аэропортов <span class="intro__numbers">241</span></li>
+        </ul>
       </section>
 
-    </main>
+
+      <section class="photo-grid" aria-label="Фотографии проекта">
+        <ul class="photo-grid__list">
+          <li><img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-window-train.jpg" alt="Окно в поезде"></li>
+          <li><img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-mountain.jpg" alt="Снежные вершины гор"></li>
+          <li><img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-dog.jpg" alt="Собака на сене"></li>
+          <li><img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-trees.jpg" alt="Верхушки деревьев в тумане"></li>
+          <li><img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-car.jpg" alt="Машина на льду"></li>
+          <li><img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-bereg.jpg" alt="Пляж"></li>
+          <li><img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-mountain-2.jpg" alt="Гора"></li>
+          <li><img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-znak.jpg" alt="Пешеходный переход,"></li>
+          <li><img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-mountain-flight.jpg" alt="Гора с высоты птичьего полёта"></li>
+          <li><img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-sopka.jpg" alt="Сопка"></li>
+          <li><img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-coast.jpg" alt="Берег и горы"></li>
+          <li><img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-fog.jpg" alt="Туман в горах"></li>
+        </ul>
+      </section>
+
+
+
+
+    <section class="places">
+      <article class="place">
+        <h2 class="place__title">Куршская коса</h2>
+        <div class="place__website">
+          <p class="place__url-heading">URL</p>
+          <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
+        </div>
+        <img class="place__image" src="./images/place/place-kosa.jpg" alt="Берег Куршского залива, фотография.">
+        <div>
+          <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны
+          и подёрнутого рябью волн Балтийского моря
+          с другой. Уникальная природная зона на&nbsp;краю российского анклава.</p>
+          <p class="place__paragraph">На этом Калининградская область не заканчивается. Для&nbsp;путешественника
+          и&nbsp;исследователя там же по&nbsp;соседству — самая западная точка России, Балтийская коса, —
+          и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие природы
+          и запах стального, прохладного моря.</p>
+        </div>
+     </article>
+
+      <article class="place">
+        <h2 class="place__title">Кольский</h2>
+        <div class="place__website">
+          <p class="place__url-heading">URL</p>
+          <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
+        </div>
+        <img class="place__image" src="./images/place/place-kolsky.jpg" alt="Кольский полуостров, фотография.">
+        <div>
+          <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
+          тайга, а&nbsp;на&nbsp;север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+          <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля
+          в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний
+          об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
+          в Мурманск.</p>
+        </div>
+      </article>
+
+      <article class="place">
+        <h2 class="place__title">Алтай</h2>
+        <div class="place__website">
+          <p class="place__url-heading">URL</p>
+          <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
+        </div>
+        <img class="place__image" src="./images/place/place-altai.jpg" alt="Вид с балкона на зеленые леса Алтая, фотография.">
+        <div>
+            <p class="place__paragraph">Алтай — одно из красивейших мест в России.
+            В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А&nbsp;если вы откроете
+            в автомобиле окна, сможете познакомиться
+            с невидимым чудом здешних мест — горным воздухом.</p>
+            <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы,
+            а&nbsp;на равнинах пасутся косули. И&nbsp;знаменитые манулы — тоже обитатели Алтайского края.</p>
+        </div>
+      </article>
+
+      <article class="place">
+        <h2 class="place__title">Зимний Байкал</h2>
+        <div class="place__website">
+          <p class="place__url-heading">URL</p>
+          <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
+        </div>
+        <img class="place__image" src="./images/place/place-winter-baikal.jpg" alt="Лед замерзшего Байкала, фотография.">
+        <div>
+          <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро&nbsp;в&nbsp;мире.&nbsp;Многие также знают, что это самый большой источник пресной воды и&nbsp;одно
+          из красивейших мест в&nbsp;России.</p>
+          <p class="place__paragraph">Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для соревнований по&nbsp;скийорингу. Это такой вид спорта, когда лыжник привязывает себя к&nbsp;мотоциклу,&nbsp;и&nbsp;тандем старается развить как можно бóльшую скорость на&nbsp;льду. В&nbsp;марте 2019 года на&nbsp;фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011&nbsp;км/ч.</p>
+        </div>
+      </article>
+
+      <article class="place">
+        <h2 class="place__title">Карелия</h2>
+        <div class="place__website">
+          <p class="place__url-heading">URL</p>
+          <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
+        </div>
+        <img class="place__image" src="./images/place/place-karelia.jpg" alt="Водлозеро, фотография.">
+        <div>
+          <p class="place__paragraph">Сибирь заканчивается не на Урале, а в&nbsp;Карелии: образующая тайгу сибирская лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает на&nbsp;30&nbsp;метров — леса карельских национальных парков из-за непроходимых болот никогда не&nbsp;знали топора. Некоторым соснам уже больше чем&nbsp;полтысячелетия. Прикоснитесь к&nbsp;живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В&nbsp;девственном лесу на&nbsp;сотню километров не&nbsp;встретишь тропы. А&nbsp;на&nbsp;редких тропинках деревья в&nbsp;паре метров от&nbsp;земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+        </div>
+      </article>
+    </section>
+
+
+    <section class="cover">
+      <a class="cover__background" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+          <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
+          <p class="cover__subtitle">По&nbsp;мотивам учебной темы о Транссибе — путешествие от&nbsp;столицы до Байкала на электричках.</p>
+      </a>
+    </section>
+  </main>
+
 
   <footer class="footer">
-    <div class="footer__columns">
+    <nav>
+      <ul class="footer__links">
+        <li class="footer__list-item"><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+        <li class="footer__list-item"><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
+        <li class="footer__list-item"><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
+        <li class="footer__list-item"><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
+        <li class="footer__list-item"><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
+      </ul>
+    </nav>
 
-      <div class="footer__column footer__column_content_copyright">
-        <img class="logo logo_place_footer" src="images/logo/logo_place_footer.svg" alt="Логотип Яндекс.Практикум">
-        <p class="footer__author">© Дмитрий Безруков</p>
-      </div>
-
-      <nav class="footer__column footer__column_content_info">
-        <h3 class="footer__column-heading">О Практикуме</h3>
-        <ul class="footer__column-links">
-          <li>
-            <a href="#" class="footer__column-link">Главная</a>
-          </li>
-          <li>
-            <a href="#" class="footer__column-link">Концепция</a>
-          </li>
-          <li>
-            <a href="#" class="footer__column-link">Наставники</a>
-          </li>
-        </ul>
-      </nav>
-
-      <nav class="footer__column footer__column_content_social">
-        <h3 class="footer__column-heading">Соцсети</h3>
-        <ul class="footer__column-links">
-          <li>
-            <a href="#" target="_blank" class="footer__column-link">
-              <img src="images/footer/facebook_color_white.svg" alt="Фейсбук" class="footer__social-icon">
-              Facebook
-            </a>
-          </li>
-          <li>
-            <a href="#" target="_blank" class="footer__column-link">
-              <img src="images/footer/vk_color_white.svg" alt="ВКонтакте" class="footer__social-icon">
-              ВКонтакте
-            </a>
-          </li>
-          <li>
-            <a href="#" target="_blank" class="footer__column-link">
-              <img src="images/footer/instagram_color_white.svg" alt="Инстаграм" class="footer__social-icon">
-              Instagram
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </footer>
-  </div>
+  <p class="footer__copyright">©2022.&nbsp;Дмитрий&nbsp;Безруков</p>
+</footer>
 </body>
 </html>
