Правки после первого ревью

--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
 и&nbsp;подёрнутого рябью волн Балтийского моря
 с&nbsp;другой. Уникальная природная зона на&nbsp;краю российского анклава.
 </p>
-<p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для путешественника
-и&nbsp;исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка России, Балтийская коса, &mdash;
+<p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для&nbsp;путешественника и&nbsp;исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка России, Балтийская коса, &mdash;
 и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие природы
 и&nbsp;запах стального, прохладного моря.
 </p>
