Второе ревью. Правки

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <img class="header__logo" src="images/logo/header__logo.svg" alt="Логотип проекта &quot;Путешествие по России&quot; ">
 <ul class="header__lang-links">
 <li class="header__lang-item"><a class="header__lang-link header__lang-link_active" href="#">Ru</a></li>
-<li><a class="header__lang-link" href="#">En</a></li>
+<li class="header__lang-item"><a class="header__lang-link" href="#">En</a></li>
 </ul>
 </header>
 <main class="content">
@@ -27,36 +27,38 @@
 </section>
 <section class="intro">
 <h2 class="intro__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
-<p class="intro__text">По&nbsp;опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только&nbsp;36% планируют провести отпуск в&nbsp;родной стране. Мол, чего мы&nbsp;тут, дома, не&nbsp;видели? На&nbsp;самом деле, Россия&nbsp;&mdash; это целая вселенная с&nbsp;ласковым морем юга, густыми лесами Саян и&nbsp;суровыми льдами плато Путорана. А&nbsp;ещё увидеть все эти красоты можно без миллионов на&nbsp;счету, загранпаспорта и&nbsp;многочасовых перелетов. Как, например, Вера Башмакова&nbsp;&mdash; смелая молодая мама, которая взяла в&nbsp;охапку троих детей, усадила их&nbsp;в&nbsp;свою &laquo;Ладу&raquo; и&nbsp;проехала 20&nbsp;тысяч километров по&nbsp;родной стране. Мы&nbsp;выбрали и&nbsp;описали некоторые интересные места, достойные вашего отпуска.</p>
+<p class="intro__text">По&nbsp;опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только&nbsp;36% планируют провести отпуск в&nbsp;родной стране. Мол, чего мы&nbsp;тут,
+  дома, не&nbsp;видели? На&nbsp;самом деле, Россия&nbsp;&mdash; это целая вселенная с&nbsp;ласковым морем юга, густыми лесами Саян и&nbsp;суровыми льдами плато Путорана.
+  А&nbsp;ещё увидеть все эти красоты можно без миллионов на&nbsp;счету, загранпаспорта и&nbsp;многочасовых перелетов. Как, например, Вера Башмакова&nbsp;&mdash; смелая
+  молодая мама, которая взяла в&nbsp;охапку троих детей, усадила их&nbsp;в&nbsp;свою &laquo;Ладу&raquo; и&nbsp;проехала 20&nbsp;тысяч километров по&nbsp;родной стране.
+  Мы&nbsp;выбрали и&nbsp;описали некоторые интересные места, достойные вашего отпуска.</p>
 <ul class="intro__list">
-<li>Часовых поясов <span class="intro__numbers">11</span></li>
-<li>Объектов природного наследия ЮНЕСКО <span class="intro__numbers">12</span></li>
-<li>Объектов культурного наследия ЮНЕСКО <span class="intro__numbers">16</span></li>
-<li> Природных заповедников <span class="intro__numbers">105</span></li>
-<li>Аэропортов <span class="intro__numbers">241</span></li>
+<li class="intro__list-item">Часовых поясов <span class="intro__numbers">11</span></li>
+<li class="intro__list-item">Объектов природного наследия ЮНЕСКО <span class="intro__numbers">12</span></li>
+<li class="intro__list-item">Объектов культурного наследия ЮНЕСКО <span class="intro__numbers">16</span></li>
+<li class="intro__list-item">Природных заповедников <span class="intro__numbers">105</span></li>
+<li class="intro__list-item">Аэропортов <span class="intro__numbers">241</span></li>
 </ul>
 </section>
 <section class="photo-grid" aria-label="Фотографии проекта">
-<ul class="photo-grid__list">
-<li><img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-window-train.jpg" alt="Окно в поезде"></li>
-<li><img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-mountain.jpg" alt="Снежные вершины гор"></li>
-<li><img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-dog.jpg" alt="Собака на сене"></li>
-<li><img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-trees.jpg" alt="Верхушки деревьев в тумане"></li>
-<li><img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-car.jpg" alt="Машина на льду"></li>
-<li><img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-bereg.jpg" alt="Пляж"></li>
-<li><img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-mountain-2.jpg" alt="Гора"></li>
-<li><img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-znak.jpg" alt="Пешеходный переход,"></li>
-<li><img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-mountain-flight.jpg" alt="Гора с высоты птичьего полёта"></li>
-<li><img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-sopka.jpg" alt="Сопка"></li>
-<li><img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-coast.jpg" alt="Берег и горы"></li>
-<li><img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-fog.jpg" alt="Туман в горах"></li>
-</ul>
+<img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-window-train.jpg" alt="Окно в поезде">
+<img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-mountain.jpg" alt="Снежные вершины гор">
+<img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-dog.jpg" alt="Собака на сене">
+<img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-trees.jpg" alt="Верхушки деревьев в тумане">
+<img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-car.jpg" alt="Машина на льду">
+<img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-bereg.jpg" alt="Пляж">
+<img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-mountain-2.jpg" alt="Гора">
+<img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-znak.jpg" alt="Пешеходный переход,">
+<img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-mountain-flight.jpg" alt="Гора с высоты птичьего полёта">
+<img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-sopka.jpg" alt="Сопка">
+<img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-coast.jpg" alt="Берег и горы">
+<img class="photo-grid__item" loading="lazy" src="./images/photo-grid/photo-grid-fog.jpg" alt="Туман в горах">
 </section>
 <section class="places" aria-label="Самые крутые места проекта">
 <article class="place">
 <h2 class="place__title">Куршская коса</h2>
 <div class="place__website">
-<p class="place__url-heading">URL</p>
+<p class="place__url-heading">url</p>
 <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
 </div>
 <img class="place__image" src="./images/place/place-kosa.jpg" alt="Берег Куршского залива, фотография.">
@@ -74,7 +76,7 @@
 <article class="place">
 <h2 class="place__title">Кольский</h2>
 <div class="place__website">
-<p class="place__url-heading">URL</p>
+<p class="place__url-heading">url</p>
 <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
 </div>
 <img class="place__image" src="./images/place/place-kolsky.jpg" alt="Кольский полуостров, фотография.">
@@ -92,7 +94,7 @@
 <article class="place">
 <h2 class="place__title">Алтай</h2>
 <div class="place__website">
-<p class="place__url-heading">URL</p>
+<p class="place__url-heading">url</p>
 <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
 </div>
 <img class="place__image" src="./images/place/place-altai.jpg" alt="Вид с балкона на зеленые леса Алтая, фотография.">
@@ -110,7 +112,7 @@
 <article class="place">
 <h2 class="place__title">Зимний Байкал</h2>
 <div class="place__website">
-<p class="place__url-heading">URL</p>
+<p class="place__url-heading">url</p>
 <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
 </div>
 <img class="place__image" src="./images/place/place-winter-baikal.jpg" alt="Лед замерзшего Байкала, фотография.">
@@ -124,7 +126,7 @@
 <article class="place">
 <h2 class="place__title">Карелия</h2>
 <div class="place__website">
-<p class="place__url-heading">URL</p>
+<p class="place__url-heading">url</p>
 <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
 </div>
 <img class="place__image" src="./images/place/place-karelia.jpg" alt="Водлозеро, фотография.">
